ecmascript/parser/tests/test262-error-references/fail/c3731145e0e65d1d.js.stderr
error: Unexpected token `#`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/c3731145e0e65d1d.js:1:1
  |
1 | #=
  | ^

